# frontier_ws

./: .gitignore  CMakeLists.txt  README.md  frames_2026-02-04_01.36.26.gv  frames_2026-02-11_23.41.21.gv  frames_2026-02-11_23.41.27.gv  frames_2026-03-05_03.11.18.gv  frames_2026-03-06_00.45.07.gv  package.xml
config/: explorer.yaml  mapper_params_online_multi_async.yaml  params.yaml  robots.yaml
include/: FrontierExplorerMulti.hpp  controller.hpp  detect_node.hpp
include/frontier_ws/: astar.hpp  common.hpp  dbscan.hpp  frontier_explorer_node.hpp  grid_utils.hpp  viz.hpp
launch/: async_decentralized_multirobot.launch.py  multi_frontier.launch.py  multi_simulation.launch.py  multi_toolbox.launch.py  ns_multi_toolbox.launch.py  octomap_merge.launch.py  single_frontier.launch.py  tf.launch.py
lua/: map_builder.lua  pose_graph.lua  tb3_0_turtlebot3_lds_2d.lua  tb3_1_turtlebot3_lds_2d.lua  tb3_2_turtlebot3_lds_2d.lua  trajectory_builder.lua  trajectory_builder_2d.lua
msg/: BboxImg.msg  DynamicObstacle.msg  EmbArray.msg
scripts/: cloud_merge_to_octomap.py  map_merge_fixed.py
src/: astar.cpp  controller.cpp  dbscan.cpp  detect_node.cpp  frontier.cpp  frontier_db.cpp  frontier_explorer_node.cpp  frontier_multi.cpp  frontier_multi_main.cpp  main.cpp  slam_toolbox_decentralized_multirobot_node.cpp  viz.cpp
